--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
