chore: add general configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
           "/^pages/",
           "/utils/",
           "/^store/",
+          "/^context/",
           "/^styles/",
           "/^templates/",
           ["parent", "sibling", "index"]
