--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next13-template",
+  "name": "youtube-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,9 +19,12 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.4",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint-config-prettier": "^8.6.0",
