--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "^18.0.26",
@@ -16,19 +17,24 @@
     "axios": "^1.2.2",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-hook-form": "^7.42.1",
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.2"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "tailwindcss": "^3.2.4"
   }
 }
