--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
