--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  // Apenas para gravar
+  // "workbench.statusBar.visible": false,
+  // "workbench.activityBar.visible": false,
+  // "workbench.editor.showTabs": false,
+  // "workbench.editor.enablePreview": false,
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
