--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
