--- a/package.json
+++ b/package.json
@@ -6,9 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --max-warnings=0",
+    "test": "jest",
+    "test:watch": "yarn test --watch",
+    "test:coverage": "yarn test --coverage --detectOpenHandles",
+    "test:coverage:text": "yarn test --coverageReporters='text-summary'",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -s public",
+    "serve-storybook": "serve storybook-static"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix"]
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "^18.0.26",
@@ -16,24 +35,52 @@
     "axios": "^1.2.2",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "next": "^13.2.0",
+    "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.43.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4",
+    "zod": "^3.20.6",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
+    "@swc/core": "^1.3.10",
+    "@swc/jest": "^0.2.23",
+    "@testing-library/cypress": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "babel-loader": "^8.3.0",
+    "cypress": "^12.6.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.2"
+    "eslint-plugin-storybook": "^0.6.11",
+    "husky": "4",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "jest-styled-components": "^7.1.1",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.2",
+    "storybook-addon-next": "^1.7.2",
+    "ts-node": "^10.9.1"
   }
 }
