feat: add dependabot ci

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix"]
+      "yarn lint --fix"
+    ]
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
