--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
-    "@next/font": "13.1.2",
     "@types/node": "18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.1.2",
-    "next": "^13.2.0",
+    "msw": "^1.1.0",
+    "next": "^13.2.2",
     "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
@@ -64,6 +64,7 @@
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
@@ -83,5 +84,8 @@
     "prettier": "^2.8.2",
     "storybook-addon-next": "^1.7.2",
     "ts-node": "^10.9.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
